--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -446,12 +446,13 @@ body{
 			float: left;
 
 			a{
-				height: 10px;
 				display: block;
-				background-color: black;
-				//margin-right: 1px;
-				//box-sizing: border-box;
-				//border-left: 1px solid white;
+				text-align: center;
+				color: white;
+				font-size: 12px;
+				line-height: 22px;
+				opacity: 1;
+				text-decoration: none;
 
 				&:hover{
 					background-color: gray;
@@ -460,25 +461,23 @@ body{
 		}
 	}
 
-	.dynasty-item{
-		margin-bottom: 15px;
+	#dynasty-wap{
+		margin-top: 35px;
 		
-		.dynasty{
+		.dynasty-period{
 			font-size: 16px;
-			line-height: 25px;
-			font-weight: bold;
-
-			.dynasty-period{
-				font-size: 12px;
-				margin-left: 5px;
-				font-weight: normal;
-				font-weight: normal;
-			}
 		}
 
-		.dynasty-introduction{
-			font-size: 14px;
-			line-height: 22px;
+		.author-item{
+			margin-bottom: 10px;
+
+			.author{
+				font-size: 16px;
+				font-weight: bold;
+			}
+
+			.author-introduction{
+			}
 		}
 	}
 }
