--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -327,12 +327,17 @@ body{
 	.collection{
 	}
 
+	.collection-author{
+		font-size: 16px;
+	}
+
 	.work-item{
 		margin-bottom: 10px;
 
 		.work-title{
+			font-size: 16px;
 			font-weight: bold;
-			margin-bottom: 5px;
+			line-height: 30px;
 		}
 	}
 }
