--- a/xichuangzhu/templates/edit_dynasty.html
+++ b/xichuangzhu/templates/edit_dynasty.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 
-<form id="form-edit-dynasty" class="form-horizontal" method="post" action="{{ url_for('edit_dynasty', dynastyID=dynasty.DynastyID) }}">
+<form id="form-edit-dynasty" class="form-horizontal" method="post" action="{{ url_for('edit_dynasty', dynasty_id=dynasty.DynastyID) }}">
 	<fieldset>
 		<legend>编辑朝代</legend>
 
