--- a/xichuangzhu/templates/single_work.html
+++ b/xichuangzhu/templates/single_work.html
@@ -24,7 +24,7 @@ $(document).ready(function(){
 		<div class="work-title">{{ work.Title }}</div>
 
 		<div class="work-author">
-			〔<a href="{{ url_for('single_dynasty', dynastyID = work.DynastyID) }}">{{ work.Dynasty }}</a>〕<a href="{{ url_for('single_author', authorID=work.AuthorID) }}">{{ work.Author }}</a>
+			〔<a href="{{ url_for('single_dynasty', dynasty_id = work.DynastyID) }}">{{ work.Dynasty }}</a>〕<a href="{{ url_for('single_author', authorID=work.AuthorID) }}">{{ work.Author }}</a>
 		</div>
 		
 		{% if work.Type == 'ci' %}
