optimize the dynasty page

--- a/xichuangzhu/static/style/page.css
+++ b/xichuangzhu/static/style/page.css
@@ -28,7 +28,7 @@ body #main-wap .tooltip-inner{padding-top:5px;padding-bottom:5px;}
 #page-single-work .work-type-ci{text-indent:2em;line-height:30px;padding:0 2em;}
 #page-single-work .work-type-geci p{text-indent:13em;margin-bottom:6px;line-height:24px;}
 #page-single-work .work-type-geci .bank{height:20px;}
-#page-single-work .work-type-wen p{text-indent:2em;line-height:30px;margin-bottom:18px;}
+#page-single-work .work-type-wen p{text-indent:2em;font-size:16px;line-height:30px;margin-bottom:18px;}
 #page-single-work .work-collection{font-weight:bold;font-size:16px;margin-bottom:5px;}
 #page-single-work .work-collection-introduction{font-size:14px;}
 #page-single-work .review-item{margin-bottom:15px;}#page-single-work .review-item .user-avatar{float:left;margin-top:5px;}
