--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -235,7 +235,6 @@ body{
 
 		font-family: '宋体';
 		font-size: 17px;
-		//olor: black;
 
 		margin-bottom: 30px;
 
@@ -272,6 +271,7 @@ body{
 	.work-type-wen{
 		p{
 			text-indent: 2em;
+			font-size: 16px;
 			line-height: 30px;
 			margin-bottom: 18px;
 		}
