add margin-top to footer

--- a/xichuangzhu/templates/layout.html
+++ b/xichuangzhu/templates/layout.html
@@ -19,7 +19,7 @@
 					<ul class="nav">
 						<li><a href="{{ url_for('index') }}">首页</a></li>
 						<li><a href="{{ url_for('my_love') }}">收藏</a></li>
-						<!-- <li><a href="#">论坛</a></li> -->
+						<li><a href="#">论坛</a></li>
 						<li><a href="{{ url_for('shop') }}">物</a></li>
 					</ul>
 
