develop a robost algorithm for auto-adjust the padding-left style of geci

--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -228,14 +228,8 @@ body{
 	}
 
 	.work-content{
-		//font-family: 'fangsong', '仿宋_GB2312';
-		//font-weight: bold;
-		//font-size: 14pt;
-		//text-shadow: 0 0 1px #DDD;
-
 		font-family: '宋体';
 		font-size: 17px;
-
 		margin-bottom: 30px;
 
 		sup{
@@ -258,8 +252,9 @@ body{
 		padding: 0 2em;
 	}
 	.work-type-geci{
+		padding-left: 13em;
+		
 		p{
-			text-indent: 13em;
 			margin-bottom: 6px;
 			line-height: 24px;
 		}
@@ -458,6 +453,7 @@ body{
 				line-height: 22px;
 				opacity: 1;
 				text-decoration: none;
+				cursor: pointer;
 
 				&:hover{
 					background-color: gray;
