--- a/xichuangzhu/static/style/page.css
+++ b/xichuangzhu/static/style/page.css
@@ -26,7 +26,7 @@ body #main-wap .tooltip-inner{padding-top:5px;padding-bottom:5px;}
 #page-single-work .work-content{font-family:'宋体';font-size:17px;margin-bottom:30px;}#page-single-work .work-content sup{font-family:'黑体';font-size:12px;font-weight:normal;padding:5px 0px;cursor:pointer;color:#666;}
 #page-single-work .work-type-shi{text-align:center;}
 #page-single-work .work-type-ci{text-indent:2em;line-height:30px;padding:0 2em;}
-#page-single-work .work-type-geci p{text-indent:13em;margin-bottom:6px;line-height:24px;}
+#page-single-work .work-type-geci{padding-left:13em;}#page-single-work .work-type-geci p{margin-bottom:6px;line-height:24px;}
 #page-single-work .work-type-geci .bank{height:20px;}
 #page-single-work .work-type-wen p{text-indent:2em;font-size:16px;line-height:30px;margin-bottom:18px;}
 #page-single-work .work-collection{font-weight:bold;font-size:16px;margin-bottom:5px;}
@@ -46,7 +46,7 @@ body #main-wap .tooltip-inner{padding-top:5px;padding-bottom:5px;}
 #page-single-author .collection-item .collection-introduction{font-size:14px;}
 #page-single-author .work-item{margin-bottom:10px;}#page-single-author .work-item .work-title{font-weight:bold;font-size:16px;}
 #page-single-author .work-item .work-content{font-size:14px;}
-#page-dynasty #dyn-selector{margin:0;position:fixed;top:40px;left:0px;list-style:none;}#page-dynasty #dyn-selector li{float:left;}#page-dynasty #dyn-selector li a{display:block;text-align:center;color:white;font-size:12px;line-height:22px;opacity:1;text-decoration:none;}#page-dynasty #dyn-selector li a:hover{background-color:gray;}
+#page-dynasty #dyn-selector{margin:0;position:fixed;top:40px;left:0px;list-style:none;}#page-dynasty #dyn-selector li{float:left;}#page-dynasty #dyn-selector li a{display:block;text-align:center;color:white;font-size:12px;line-height:22px;opacity:1;text-decoration:none;cursor:pointer;}#page-dynasty #dyn-selector li a:hover{background-color:gray;}
 #page-dynasty #dynasty-wap{margin-top:35px;}#page-dynasty #dynasty-wap .dynasty-period{font-size:16px;}
 #page-dynasty #dynasty-wap .author-item{margin-bottom:10px;}#page-dynasty #dynasty-wap .author-item .author{font-size:16px;font-weight:bold;}
 #page-single-dynasty .dynasty-period{font-size:16px;}
